--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,7 +6,8 @@
   "webDir": "www",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 0
+      "launchShowDuration": 0,
+      "launchAutoHide": true
     }
   },
   "cordova": {}
