--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "@ionic/core": "^5.6.8",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-in-memory-web-api": "^0.11.0",
     "chart.js": "^2.9.4",
+    "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
     "rxjs": "~6.6.0",
