--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build":"ionic-app-scripts build",
+    "ionic:serve":"ionic-app-scripts serve",
     "test": "ng test",
-    "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -37,7 +39,9 @@
     "primeng": "^11.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~4.0.2",
+    "@ionic/app-scripts":"3.2.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.13",
@@ -69,8 +73,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "ts-node": "~8.3.0"
   },
   "description": "An Ionic project"
 }
