--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "engines": {
+    "node": "14.15.5"
+  }
 }
