--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "ng serve",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
+    "ionic:build":"ionic-app-scripts build",
+    "ionic:serve":"ionic-app-scripts serve",
     "test": "ng test",
     "e2e": "ng e2e"
   },
@@ -25,7 +25,6 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
-    "@ionic/app-scripts": "3.2.4",
     "@ionic/core": "^5.6.8",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -35,14 +34,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "path": "^0.12.7",
     "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "zone.js": "~0.10.2",
     "typescript": "~4.0.2",
-    "zone.js": "~0.10.2"
+    "@ionic/app-scripts":"3.2.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.13",
@@ -50,9 +49,9 @@
     "@angular-eslint/eslint-plugin": "2.0.2",
     "@angular-eslint/eslint-plugin-template": "2.0.2",
     "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "^12.0.3",
+    "@angular/cli": "~11.2.4",
     "@angular/compiler": "~11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "2.4.7",
     "@ionic/angular-toolkit": "^2.3.3",
@@ -61,7 +60,6 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "enhanced-resolve": "^3.3.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
