pdfdownload works now in mobile

--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.33.1",
+    "@ionic-native/file-opener": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/core": "^5.6.8",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-in-memory-web-api": "^0.11.0",
     "chart.js": "^2.9.4",
+    "cordova-plugin-file-opener2": "^3.0.5",
+    "jetifier": "^2.0.0",
     "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
