--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/file-opener": "^5.33.1",
+    "@ionic-native/native-page-transitions": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/core": "^5.6.8",
     "@ionic/pwa-elements": "^3.0.2",
@@ -31,6 +32,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-in-memory-web-api": "^0.11.0",
     "chart.js": "^2.9.4",
+    "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-plugin-file-opener2": "^3.0.5",
     "jetifier": "^2.0.0",
     "pdfmake": "^0.1.71",
