--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "chart.js": "^2.9.4",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-plugin-file-opener2": "^3.0.5",
+    "html-to-pdfmake": "^2.2.4",
+    "html-to-text": "^8.0.0",
     "jetifier": "^2.0.0",
     "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
